working on HTML
- need to find out how to style the name on one side and status on the other

--- a/ghstatus.html
+++ b/ghstatus.html
@@ -7,6 +7,9 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="top">GitHub Status</div>
+    <div id="box">
+        dsad
+    </div>
 </body>
 </html>
