--- a/ghstatus.html
+++ b/ghstatus.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <div id="top">GitHub Status</div>
-    <div id="box">
-        dsad
+    <div id="info">
+        <div id="box">
+            <p id="name">Git Operations</p>
+            <p id="status">dslkflsdkjf</p>
+        </div>
+        <div id="box">
+            <p id="name">API Requests</p>
+            <p id="status">dslkflsdkjf</p>
+        </div>
+        <div id="box">
+            <p id="name">Webhooks</p>
+            <p id="status">dslkflsdkjf</p>
+        </div>
     </div>
 </body>
 </html>
