need to test js
- need to allow permission for browserify to be used

--- a/ghstatus.html
+++ b/ghstatus.html
@@ -7,20 +7,49 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div id="top">GitHub Status</div>
-    <div id="info">
-        <div id="box">
-            <p id="name">Git Operations</p>
-            <p id="status">dslkflsdkjf</p>
+    <div class="top">GitHub Status</div>
+    <div class="info">
+        <div class="box">
+            <p class="name">Git Operations</p>
+            <p class="status" id="GitOperations">Unknown</p>
         </div>
-        <div id="box">
-            <p id="name">API Requests</p>
-            <p id="status">dslkflsdkjf</p>
+        <div class="box">
+            <p class="name">API Requests</p>
+            <p class="status" id="APIRequests">Unknown</p>
         </div>
-        <div id="box">
-            <p id="name">Webhooks</p>
-            <p id="status">dslkflsdkjf</p>
+        <div class="box">
+            <p class="name">Webhooks</p>
+            <p class="status" id="Webhooks">Unknown</p>
+        </div>
+        <div class="box">
+            <p class="name">Issues</p>
+            <p class="status" id="Issues">Unknown</p>
+        </div>
+        <div class="box">
+            <p class="name">Pull Requests</p>
+            <p class="status" id="PullRequests">Unknown</p>
+        </div>
+        <div class="box">
+            <p class="name">Actions</p>
+            <p class="status" id="Actions">Unknown</p>
+        </div>
+        <div class="box">
+            <p class="name">Packages</p>
+            <p class="status" id="Packages">Unknown</p>
+        </div>
+        <div class="box">
+            <p class="name">Pages</p>
+            <p class="status" id="Pages">Unknown</p>
+        </div>
+        <div class="box">
+            <p class="name">Codespaces</p>
+            <p class="status" id="Codespaces">Unknown</p>
+        </div>
+        <div class="box">
+            <p class="name">Copilot</p>
+            <p class="status" id="Copilot">Unknown</p>
         </div>
     </div>
+    <script src="ghstatus.js"></script>
 </body>
 </html>
