now using browserify for JS file to work on browser
- need to keep using browserify ghstatus.js -o bundle.js every time changes are made to ghstatus.js
- for loop for iterating through statusMap.keys() is for some reason not working

--- a/ghstatus.html
+++ b/ghstatus.html
@@ -50,6 +50,6 @@
             <p class="status" id="Copilot">Unknown</p>
         </div>
     </div>
-    <script src="ghstatus.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
