error trying to call CheckStatus() because of browserify

--- a/ghstatus.html
+++ b/ghstatus.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Status</title>
-    <link href="style.css" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>GitHub Status</title>
+        <link href="style.css" rel="stylesheet">
+        <script src="bundle.js"></script>
+    </head>
 <body>
     <div class="top">GitHub Status</div>
     <div class="info">
@@ -50,6 +51,6 @@
             <p class="status" id="Copilot">Unknown</p>
         </div>
     </div>
-    <script src="bundle.js"></script>
+    <button onclick="CheckStatus()">Refresh Status</button>
 </body>
 </html>
