refresh button works now
- in order for html to access function, the function had to be declared global using module.exports and giving it a name in a string
- then browserify it including a namespace name:
browserify ghstatus.js --standalone myspace -o bundle.js
- then html can access it through the namespace name first then its string name given to it

- need to style refresh button
- need to add last time status was checked

--- a/ghstatus.html
+++ b/ghstatus.html
@@ -51,6 +51,6 @@
             <p class="status" id="Copilot">Unknown</p>
         </div>
     </div>
-    <button onclick="CheckStatus()">Refresh Status</button>
+    <button onclick="myspace.CheckStatus()">Refresh Status</button>
 </body>
 </html>
