--- a/ghstatus.html
+++ b/ghstatus.html
@@ -51,6 +51,8 @@
             <p class="status" id="Copilot">Unknown</p>
         </div>
     </div>
-    <button onclick="myspace.CheckStatus()">Refresh Status</button>
+    <div class="buttonDiv">
+        <button class="butt" onclick="myspace.CheckStatus()">Refresh Status</button>
+    </div>
 </body>
 </html>
